# open-ath9k-htc-firmware

./: .travis.yml  LICENCE.TXT  Makefile  NOTICE.TXT  README  build  com.qualcomm.qca.ath9k_htc.firmware.metainfo.xml
local/patches/: binutils-2.27_fixup.patch  binutils-2.34_fixup.patch  binutils-2.36_fixup.patch  binutils.patch  gcc-6.3.0_fixup.patch  gcc.patch
sboot/utility/adjust_dep/: adj_dep.c
sboot/utility/adjust_time/: adj_time.c
sboot/utility/bin2hex/: bin2hex.c  bin2hex_swp.c
sboot/utility/imghdr/: imghdr.c
target_firmware/: CMakeLists.txt  Makefile  configure  firmware-crc.pl  ram-k2.ld  ram-magpie.ld  rom-addrs-k2.ld  rom-addrs-magpie.ld
target_firmware/include/: rom.h
target_firmware/wlan/: _ieee80211.h  ah.c  ah.h  ah_desc.h  ah_internal.h  ah_osdep.c  ah_osdep.h  ar5416.h  ar5416Phy.c  ar5416_hw.c  ar5416_phy.c  ar5416desc.h  ar5416phy.h  ar5416reg.h  ieee80211.h  ieee80211_linux.h  ieee80211_node.h  ieee80211_output.c  ieee80211_proto.h  ieee80211_var.h  if_ath.c  if_ath_pci.c  if_ath_pci.h  if_athrate.h  if_athvar.h  if_ethersubr.h  if_llc.h  if_owl.c  queue.h  ratectrl.h  ratectrl11n.h  ratectrl_11n_ln.c
target_firmware/wlan/include/: athdefs.h  htc.h  htc_services.h  wlan_hdr.h  wmi.h
target_firmware/wlan/include/k2/: wlan_cfg.h
target_firmware/wlan/include/magpie/: wlan_cfg.h
